made modification to how email relating to account are handled
