# routes/api.php
@@ -37,10 +37,9 @@ Route::group(['prefix' => 'v1'], function () {
     Route::post('login', [Auth\AuthController::class, 'login'])->name('login');
 
 
-
-    Route::post('product/', [ProductController::class, 'store'])->name('product.create');
     Route::middleware(['auth:sanctum'])->group(function () {
         Route::prefix('agent')->group(function () {
+            Route::post('product/', [ProductController::class, 'store'])->name('product.create');
             Route::put('product/{id}', [ProductController::class, 'update'])->name('product.update');
             Route::delete('product/{id}', [ProductController::class, 'destroy'])->name('product.delete');
         });
@@ -53,8 +52,9 @@ Route::group(['prefix' => 'v1'], function () {
             Route::delete('clear', [CartController::class, 'clearAllCart'])->name('cart.clear');
         });
 
+        Route::post('password-change', [Auth\PasswordResetController::class, 'resetPassword']);
         Route::get('profile', [UserController::class, 'profile'])->name('profile');
-        Route::patch('profile-update/{id}', [UserController::class, 'profileUpdate'])->name('updateProfile');
+        Route::patch('profile/update/{id}', [UserController::class, 'profileUpdate']);
         Route::get('logout', [Auth\AuthController::class, 'logout'])->name('logout');
 
         Route::prefix('admin')->group(function () {
